# stageroscam

./: 20Mx20M.launch  CMakeLists.txt  IGVC01.launch  IGVC2012.launch  IGVC2013_AutoNavBasic.launch  IGVC2013_AutoNavBasic2.launch  IGVC2013_AutoNavBasic3.launch  IGVC2013_JAUS.launch  IGVC2013_JAUS_movebase.launch  Makefile  Makefile.stage  README.md  camera_rev.patch  camera_rev2.patch  package.xml  rviz.launch  stage-cffb7bf9819469e38396c7711cfde3f4c9573a0e.tar.gz.md5sum
rviz/: stage.vcg  stage_JAUS.vcg  stage_matlab.vcg
src/: stageros.cpp
world/: 20Mx20M.world  IGVC01.world  IGVC02.world  IGVC2012.world  IGVC2013_Auto-Nav_Basic.world  IGVC2013_Auto-Nav_Basic2.world  IGVC2013_Auto-Nav_Basic3.world  IGVC2013_JAUS.world  cerberus_camera.inc  husky_camera.inc  stage_igvc_obstacles.inc  stage_igvc_waypoints.inc  willow-erratic.world  willow-four-erratics.world
world/bitmaps/Create_png/: Get_one_pixel_line.m
